--- a/index.html
+++ b/index.html
@@ -42,6 +42,38 @@
                 <div class="col-12">
                     <div class="jumbotron" id="searchDiv">
                         <h1 class="display-3">Search Form Jumbotron</h1>
+                        <form id="searchForm">
+                            <div class="form-group">
+                                <label for="searchTermInput">Search Term</label>
+                                <input
+                                    type="text"
+                                    class="form-control"
+                                    id="searchTermInput"
+                                />
+                            </div>
+                            <div class="form-group">
+                                <label for="numRecordsToGet"
+                                    >Number of Records to Retrieve</label
+                                >
+                                <select
+                                    class="form-control"
+                                    id="numRecordsToGet"
+                                >
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                    <option>5</option>
+                                </select>
+                            </div>
+                            <button
+                                type="submit"
+                                class="btn btn-primary"
+                                id="submitSearchBtn"
+                            >
+                                Submit
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
