added instructions on how to generate an article card

--- a/index.html
+++ b/index.html
@@ -107,14 +107,25 @@
                     <div class="jumbotron">
                         <div id="searchResults">
                             <h1 class="display-3">Search Results</h1>
+                            <!-- HOW TO GENERATE ARTICLE CARD JS EXAMPLE -->
+                            <!-- var cardDiv =$("<div>"); -->
+                            <!-- cardDiv.addClass("card my-2") -->
+                            <!-- var cardHeader = $("<div>");-->
+                            <!-- cardHeader.addClass("card-header"); -->
+                            <!-- cardDiv.append(cardHeader); -->
+                            <!-- cardHeader.text(ARTICLE TITLE);-->
+                            <!-- var cardBody= $("<div>");-->
+                            <!-- cardBody.addClass("card-body"); -->
+                            <!-- var cardText = $("<div>"); -->
+                            <!-- cardText.addClass("card-text"); -->
+                            <!-- cardBody.append(cardText); -->
+                            <!-- cardText.text(ARTICLE SUMMARY) -->
+
                             <div class="card my-2">
                                 <div class="card-header">
-                                    Example Article Result Number 1
+                                    ARTICLE TITLE 1
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">
-                                        Example Article Title
-                                    </h5>
                                     <p class="card-text">
                                         Article Summary
                                     </p>
@@ -122,12 +133,9 @@
                             </div>
                             <div class="card my-2">
                                 <div class="card-header">
-                                    Example Article Result Number 2
+                                    ARTICLE TITLE 2
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">
-                                        Example Article Title
-                                    </h5>
                                     <p class="card-text">
                                         Article Summary
                                     </p>
